# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//magma/gnbuild/magma.gni")

use_vulkan_loader = false

executable("shaderharness") {
  include_dirs = [ "." ]

  defines = [ "VK_USE_PLATFORM_MAGMA_KHR" ]

  sources = [
    "shadertoy.cc",
    "main_fuchsia.cc",
  ]

  configs -=  [ "//build/config:no_exceptions" ]

  deps = [
    "$magma_build_root/src/magma_util",
    "$magma_build_root/src/magma_util/platform:trace",
    "//magma:vulkan",
  ]

  if (magma_enable_tracing) {
  }

  if (use_vulkan_loader) {
    deps += [ "$magma_build_root:vulkan" ]
  } else {
    deps += [
      "$mesa_build_root:magma_vulkan",
    ]
  }
}
